fixed text-align

--- a/Functional Prototype/style.css
+++ b/Functional Prototype/style.css
@@ -1129,7 +1129,7 @@ h2 {
     position: absolute;
     width: 207.74px;
     height: 23px;
-    left: 75px;
+    left: 95px;
     top: 1px;
     
     font-family: Mulish;
